rearrage the work

--- a/CcsbiProject/templates/Capacity.html
+++ b/CcsbiProject/templates/Capacity.html
@@ -13,10 +13,8 @@
     <h2><b> Capacity building programmes for citizen scientists </b></h2>
     <hr  color="red" style="margin-left:0px; height: 5px;width:15%;">
     <br>
-    <div class="row">
-        <div class="col-sm-4" >
-            <img src="{% static '/images/academic research.svg' %}" padding-left:25%  width="100%"    alt="...">
-        </div>
+    <div class="row" style="background-color: #F2F2F2;padding: 10px;border-radius: 25px;">
+
         
         <div class="col-sm-8" >
             <br>
@@ -30,10 +28,13 @@
             </p>
 
         </div>
+        <div class="col-sm-4" >
+            <img src="{% static '/images/academic research.svg' %}" padding-left:25%  width="100%"    alt="...">
+        </div>
 
     </div>
     <br>
-    <div class="row">
+    <div class="row" style="background-color: #F2F2F2; padding: 10px;border-radius: 25px;">
         <div class="col-sm-8" >
             <h2 >
                 <b>Taxonomy Workshops </b>
@@ -53,11 +54,7 @@
     </div>
 
     <br>
-    <div class="row">
-        <div class="col-sm-4" >
-            <img src="{% static '/images/public_library.jpg' %}" padding-left:25%  width="100%"    alt="...">
-        </div>
-        
+    <div class="row" style="background-color: #F2F2F2; padding: 10px;border-radius: 25px;">        
         <div class="col-sm-8" >
             <br>
             <h2 >
@@ -70,6 +67,9 @@
                  what analysis should be carried out to interpret the data. This session will be covering the basics of biostatistics and introduction to softwares. 
             </p>
 
+        </div>
+        <div class="col-sm-4" >
+            <img src="{% static '/images/public_library.jpg' %}" padding-left:25%  width="100%"    alt="...">
         </div>
 
     </div>
