--- a/CcsbiProject/templates/Networks.html
+++ b/CcsbiProject/templates/Networks.html
@@ -7,7 +7,7 @@
 <br>
 <div class="container">
     <p style="font-size: 30px; " class="text-center">
-    <b> Work with us </b>
+    <b> Connect with us </b>
     </p>
     <p class="text-justify">
         The <b>CitSci Network</b> is a collaboration of student clubs (citizen science clubs), researchers, NGOs, Academic institutions and public libraries with CCSBI for generating biodiversity data through citizen science. Each unit of participants are expected to work independently on their area of focus while maintaining continuous communication with the centre.  The centre will be conducting productive workshops and training programmes on citizen science for the participants for optimising their workflow and outreach activities. If you represent any of the below-mentioned categories and are interested in joining, feel free to contact us. 
