--- a/CcsbiProject/templates/Opportunities.html
+++ b/CcsbiProject/templates/Opportunities.html
@@ -2,4 +2,75 @@
 {% load static %}
 
 {% block content %}
+
+<div class="container">
+    <br>
+<br>
+<br>
+<h2 style="text-align: center;"> <b>Work with us </b></h2>
+
+    <div class="row">
+        <div class="col-md-5">
+
+            <img src="{% static '/images/oppo1.png' %}"  alt="..." width="100%" height="100%">
+
+        </div>
+        <div class="col-md-7">
+            <br>
+            <br>
+            <h2>Biodiversity internship programme</h2>
+            <span>CCSBI is inviting interns to carry out citizen science projects
+                across the state. Postgraduates/PG students (life science or
+                environmental science) can apply for this internship. The
+                program will be focusing on creating and executing a citizen
+                science project on your own, on any public oriented platform.
+            </span>
+
+        </div>
+
+
+    </div>
+
+    <div class="row">
+
+        <div class="col-md-7">
+            <br>
+            <br>
+            <br>
+            <h2>MSc / BSc dissertation </h2>
+            <span>Graduate and postgraduate students (Life science) can contact the Centre for Citizen Science and Biodiversity Informatics for carrying out short-term research on CitSci projects as UG/PG dissertation under Dr Balakrishnan Peroth, Scientist, Dept. of Wildlife Biology, KFRI.
+            </span>
+
+        </div>
+        <div class="col-md-5">
+            
+            <img src="{% static '/images/oppo2.jpeg' %}"  alt="..." width="100%" height="100%">
+
+        </div>
+
+
+    </div>
+
+    <div class="row">
+        <div class="col-md-5">
+            <img src="{% static '/images/oppo3.png' %}"  alt="..." width="100%" height="100%">
+
+        </div>
+        <div class="col-md-7">
+            <br>
+            <br>
+            <br>
+            <br>
+<br>
+            <h2>Outreach interns </h2>
+            <span>Outreach internship is designed for arts and media students. It is aimed at encouraging students to come up with innovative ideas for promoting citizen science and spreading its achievements through virtual media platforms. It can be videos, art forms, installations etc. 
+            </span>
+
+        </div>
+
+
+    </div>
+
+
+</div>
 {% endblock content %}
