--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -161,7 +161,7 @@
     <img src="{% static '/images/Home1.jpeg' %}" width="100%"   alt="...">
     <p class="text-center"><b>Curiosity fuels motivation to explore and learn. Our own backyard is the best place to start! Are you curious? Want to explore and learn?
     
-        You are at the right place!<span style="color: purple;" > The Centre for Citizen Science and Biodiversity Informatics</span> will guide you to be a citizen scientist! </b></p>
+        You are at the right place!<span style="color: #0E5D7A;" > The Centre for Citizen Science and Biodiversity Informatics</span> will guide you to be a citizen scientist! </b></p>
     <br/>
     <br/>
 
@@ -328,7 +328,7 @@
             </p>
         </div>
         <div class="col-md-7" >
-            <img src="{% static '/images/home4.png' %}"  width="100%" height="100%"   alt="...">
+            <img src="{% static '/images/home5.png' %}"  width="100%" height="100%"   alt="...">
         </div>
     </div>
     
