rearrage the work

--- a/CcsbiProject/templates/index.html
+++ b/CcsbiProject/templates/index.html
@@ -159,9 +159,9 @@
 
 
     <img src="{% static '/images/Home1.jpeg' %}" width="100%"   alt="...">
-    <p class="text-center"><b>Curiosity fuels motivation to explore and learn. Our own backyard is the best place to start! Are you curious? Want to explore and learn?
+    <p class="text-center" style=" font-family: Merriweather;font-size: 22px;"><b><i>Curiosity fuels motivation to explore and learn. Our own backyard is the best place to start! Are you curious? Want to explore and learn?
     
-        You are at the right place!<span style="color: #0E5D7A;" > The Centre for Citizen Science and Biodiversity Informatics</span> will guide you to be a citizen scientist! </b></p>
+        You are at the right place!<span style="color: #0E5D7A;" > The Centre for Citizen Science and Biodiversity Informatics</span> will guide you to be a citizen scientist! </b ></i></p>
     <br/>
     <br/>
 
@@ -170,14 +170,14 @@
         
         <div class="col-md-6" >
             <br/>
-            <h2><b>What is Citizen Science</b></h2>
+            <h2 ><b>What is Citizen Science</b></h2>
 
  
-            <br/>
+
             <br/>  
-            <p class="text-justify">Citizen science is both an opportunity and a tool! An opportunity for the general public to take part and contribute to science. And a well versed tool for researchers to pool in crowd sourced data. Citizen science is the collaborative research carried out by citizen volunteers and professional scientists to solve a real world question. This crowd sourcing has the potential to collect numerous data from wider locations in a shorter period of time. 
+            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">Citizen science is both an opportunity and a tool! An opportunity for the general public to take part and contribute to science. And a well versed tool for researchers to pool in crowd sourced data. Citizen science is the collaborative research carried out by citizen volunteers and professional scientists to solve a real world question. This crowd sourcing has the potential to collect numerous data from wider locations in a shorter period of time. 
             </p>
-            <p class="text-justify">Across the world, Citizen science brings together people, scientists and policymakers for the conservation of natural resources. Starting from project design to policy implementation, the general public has potential roles to play. 
+            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">Across the world, Citizen science brings together people, scientists and policymakers for the conservation of natural resources. Starting from project design to policy implementation, the general public has potential roles to play. 
             </p>
         </div>
         <div class="col-md-5" >
@@ -198,18 +198,18 @@
             <br/>    
             <br/>
             <br/>  
-            <h2><b></b>Citizen Science In India? </b></h2> 
-            <p class="text-justify">We are facing a severe data shortage on biodiversity, especially on lesser-known and non-charismatic species. Crowd-sourced data could help us understand their ecology, distribution and population status. In a biodiversity-rich country like ours, Your contributions matter!</p>
+            <h2 ><b>Citizen Science In India? </b></h2> 
+            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">We are facing a severe data shortage on biodiversity, especially on lesser-known and non-charismatic species. Crowd-sourced data could help us understand their ecology, distribution and population status. In a biodiversity-rich country like ours, Your contributions matter!</p>
 
         </div>
     </div>
     <h2 style="text-align: center;"><b>Centre for Citizen Science and Biodiversity Informatics</b></h2>
-    <p class="text-justify">
+    <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
         Building a knowledgeable society is inevitable for the conservation and management of natural resources. Training the general public to explore and learn their biodiversity is the best way to do so and Citizen science can be a perfect tool for that. The Centre for Citizen Science and biodiversity informatics (CCSBI) is an initiative by the Kerala Forest Research Institute. We envision carving out a knowledgeable society of citizen scientists through outreach and capacity building, and to generate quality biodiversity data for the future management and conservation activities. 
     </p>
 
     <div>
-        <h2>Objectives: </h2>
+        <h2 ><b>Objectives: </b></h2>
 
         <div class="row">
             
@@ -220,7 +220,7 @@
 
 
        
-        <ul >
+        <ul style=" font-family: Merriweather;font-size: 22px;">
             <li>
                 Coordinate and co-develop citizen science programmes in critical areas,
             </li>
@@ -238,11 +238,12 @@
             </li>
         </ul>
     </div>
-    <p>We welcome you all to explore, learn and grow with us!</p>
+    <br>
+    <p style=" font-family: Merriweather;font-size: 22px; text-align: center; color: #808080; font-weight: bold;" >We welcome you all to explore, learn and grow with us!</p>
 </div>
         
     </div>
-    <h1><b>Our Network & Impact</b></h1>
+    <h2 style="text-align: center;"><b>Our Network & Impact</b></h2>
     <br>
     <div class="row">
         <div class="col" style="width:100%">
@@ -318,12 +319,12 @@
  
             <br/>
             <br/>  
-            <p class="text-justify">
+            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
                 Becoming a citizen scientist is quite simple; create an account on a CitSci platform like <a href="https://www.inaturalist.org">iNaturalist</a>, explore your backyard, click photos of the biodiversity around you and upload your observations. Welcome to the community!
 
 
             </p>
-            <p class="text-justify">
+            <p class="text-justify" style=" font-family: Merriweather;font-size: 22px;">
                 Want to do more? We will help you take part in prestigious CitSci projects across the country or to create your own citsci projects. Check out the Projects and Resources page for more information.  
             </p>
         </div>
