rearrage the work

--- a/CCSBI/templates/base.html
+++ b/CCSBI/templates/base.html
@@ -5,7 +5,6 @@
   .navbar {
 
     width: 100%;
-    margin-left: -1%;
   }
   
 </style>
@@ -50,10 +49,10 @@
                     <a class="nav-link" aria-current="page" href="/home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/projects">Citsci Projects</a>
+                    <a class="nav-link" href="/projects">Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/Networks">Citsci Networks</a>
+                    <a class="nav-link" href="/Networks">Networks</a>
                   </li>
                  <!--  <li class="nav-item">
                     <a class="nav-link" href="/Datasets">Data Sets</a>
