--- a/CcsbiProject/templates/Networks.html
+++ b/CcsbiProject/templates/Networks.html
@@ -1,7 +1,16 @@
 {% extends "base.html" %}
+
 {% load static %}
 
 {% block content %}
+<style>
+    .text-justify{
+        font-family: Merriweather;font-size: 18px;
+
+    }
+    
+    
+</style>
 <br>
 <br>
 <br>
